@@ -1,3 +1,8 @@
+2001-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-e21.el (w3m-imagick-convert-usable-p): New function.
+	(w3m-use-favicon): Use it.
+
 2001-12-06  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>,
 	    TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
